Remove unnecessary alts and accompanying translations, fix list icons not working on mobile properly, clean up code

--- a/src/components/about-page/List/style.scss
+++ b/src/components/about-page/List/style.scss
@@ -106,8 +106,8 @@
     &__icon {
       color: $c_loblolly;
 
-      &--active {
-        z-index: 5;
+      &:focus {
+        outline: none;
       }
     }
 
